--- a/clase.html
+++ b/clase.html
@@ -16,10 +16,10 @@
   <table>
     <thead>
       <tr>
-        <th>Imagen</th>
-        <th>Producto</th>
+        <th>Imagenes</th>
+        <th>Productos</th>
         <th>Especificaciones</th>
-        <th>Precio</th>
+        <th>Precios</th>
       </tr>
     </thead>
     <tbody>
